tests/miniJava/neg/005045_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , int [] void ) { return 0 ; } }
